css/game.css
@import url(http://fonts.googleapis.com/css?family=Droid+Sans:bold);

body {
	font: 20px/1em 'Droid Sans', sans-serif;
}

.cards {
	width: 530px;
	height: 720px;
	display: inline-block;
	vertical-align:top;
	-webkit-perspective:400px;
	-moz-perspective:100px;
}

.card {
	width: 232px; /*fit contents plus padding*/
	height: 332px;
	margin: 10px;
	position: relative;
	float: left;
}

.front, .back {
	position: absolute;
	width: 200px;
	height: 300px;
	padding: 16px;
	border: 1px solid #ccc;
	border-radius: 16px;
	display: inline-block;
	vertical-align: top;
	text-align: center;

	box-shadow: 	inset rgba(255,254,255,0.4) 0 0.3em .3em, 
					inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
					rgba(0,0,0,0.3) 0 .1em 1px, /* border */
					rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */

	background-image:         linear-gradient(to bottom, white, #dddddd);

	-moz-backface-visibility: hidden;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

	transition: 1.6s;
	transform-style: preserve-3d;
}

/* flip the pane when hovered */
.card.dead .front {
	-webkit-transform: rotateY(180deg);
	-transform: rotateY(180deg);
}
.card.dead .back {
	-webkit-transform: rotateY(0deg);
	-transform: rotateY(0deg);
}

.back {
	-webkit-transform: rotateY(-180deg);
	-transform: rotateY(-180deg);
}

.controls {
	width: 160px;
	height: 720px;
	display: inline-block;
	vertical-align:top;
	padding: 16px;
	text-align: center;
}

.controls.dead {
	background: grey;
}

.actionbutton {

	text-shadow: 			rgba(255,255,255,.5) 0 1px 0;

	width: 120px;
	height: 32px;
	margin: 16px auto;
	font-size: 20px;
	position: relative;

	/*based on BonBon Buttons 1.1 by simurai.com*/

	padding: 				.5em .6em .4em 1.6em;

	border-radius: 1.5em / 1em;

	background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);
	background-image: 	-moz-radial-gradient(top, ellipse cover, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0) 100%), url(noise.png);
	background-image: 	gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);

	color: 				hsl(88, 70%, 30%) !important;
	background-color: 	hsl(88, 70%, 60%);
	box-shadow:		 	inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ 
							hsl(88, 70%, 40%) 0 .1em 3px, hsl(88, 70%, 30%) 0 .3em 1px, /* color border */
							rgba(0,0,0,0.2) 0 .5em 5px; /* drop shadow */

	border-top: none;
	display: inline-block;
	position: relative;
	border-bottom: 1px solid rgba(0,0,0,0.1);
}

.actionbutton:hover { 	background-color: hsl(88, 70%, 75%); }

.dead .actionbutton {
	/*based on BonBon Buttons 1.1 by simurai.com*/
	opacity: 			.5;
	cursor: 			default;
	color: 				rgba(0,0,0,0.2) !important;
	text-shadow: 		none !important;
	background-color: 	rgba(0,0,0,0.05);
	background-image: 	none;
	border-top: 		none;
	box-shadow: 		inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */

	-webkit-transform: 	translateY(5px);
	-moz-transform: 	translateY(5px);
	transform: 			translateY(5px);
}


.bar {
	width: 192px;
	height: 32px;
	background: #ccc;
	border-radius: 16px;
	margin: 16px auto;
	position: relative;
	background-image: url(noise.png);
}

.cooldown {
	height: 20px;
	margin: 6px;
	background: hsl(208, 100%, 75%);
	border-radius:  16px;
	position: absolute;

	background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);
	background-image: 	-moz-radial-gradient(top, ellipse cover, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0) 100%), url(noise.png);
	background-image: 	gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);
}

.label {
	width: 192px;
	position: absolute;
	margin-top: 6px;
	text-align: center;
}

.instructions {
	font-size: 28px;
	margin-top: 18px;
}

/* cover tokens*/

.coverTokens {
	min-height: 64px; /* will keep two rows even if all tokens are removed*/
}

.coverToken {
	/*based on BonBon Buttons 1.1 by simurai.com*/
	width: 8px;
	height: 8px;

	padding-left: .8em;
	padding-right: .8em;
	border-radius: 1.5em / 1em;

	background-image: 	-webkit-gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);
	background-image: 	-moz-radial-gradient(top, ellipse cover, rgba(255,255,255,0.7) 0%, rgba(255,255,255,0) 100%), url(noise.png);
	background-image: 	gradient(radial, 50% 0, 100, 50% 0, 0, from( rgba(255,255,255,0) ), to( rgba(255,255,255,0.7) )), url(noise.png);

	color: hsl(208, 50%, 40%);
	background-color: hsl(208, 100%, 75%);

	box-shadow: inset rgba(255,254,255,0.6) 0 0.3em .3em, inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */ hsl(208, 50%, 55%) 0 .1em 3px, hsl(208, 50%, 40%) 0 .3em 1px, /* color border */ rgba(0,0,0,0.2) 0 .5em 5px;

	border-top: none;
	padding: .5em .6em .4em .6em;
	margin: .25em;
	display: inline-block;
	position: relative;
	border-bottom: 1px solid rgba(0,0,0,0.1);
}

/* key hints */

.keyhint {
	width: 19px;
	height: 19px;
	padding-right: 3px;
	padding-bottom: 3px;
	margin-left: -19px;
	margin-top: 3px;

	background: rgba(94, 233, 59, 200);

	box-shadow: 		inset rgba(255,254,255,0.4) 0 0.3em .3em, inset rgba(0,0,0,0.1) 0 -0.1em .3em, /* inner shadow */ 
							rgba(0,0,0,0.3) 0 .1em 1px, /* border */
							rgba(0,0,0,0.2) 0 .2em 6px; /* drop shadow */

	position: absolute;
	display: none;
}

.controls .keyhint {
	display: block;
	background: rgba(200, 200, 200, 100);
}

.keyhints .keyhint.p1 {
	background: skyblue;
}

.cards .keyhint {
	width: 24px;
	height: 24px;
	font-size: 160%;
}

.cards .keyhint.p1 {
	background: skyblue;
	margin-top: 30px;
}

.keyhints .keyhint {
	display: block;
	background: rgba(94, 233, 59, 200);
}

.keyhints0 .keyhint.p0 {
	display: block;
}

.keyhints1 .keyhint.p1 {
	display: block;
}

.controls.p0.chooseAction {
	background: rgba(94, 233, 59, 0.2);
	box-shadow: 0px -2px 5px rgba(94, 233, 59, 0.2);
}

.controls.p1.chooseAction {
	background: hsla(208, 100%, 75%, 0.2);
	box-shadow: 0px -2px 5px hsla(208, 100%, 75%, 0.2);
}

/* Elements I might remove */
.energy, .dodge, .leadership, .aim, .cover {
	display: none;
}

/* Control panel state */
.onChooseTarget, .onChooseAction, .onWait {
	display: none;
}
.chooseTarget .onChooseTarget, 
.wait .onWait, 
.chooseAction .onChooseAction {
	display: block;
}

